fix currency symbol misalignment when error is present on FormattedNumberInput. Style for when both error and extra are present

--- a/src/styles/antd-overrides/input.scss
+++ b/src/styles/antd-overrides/input.scss
@@ -217,6 +217,10 @@ input:-webkit-autofill-selected {
   min-height: 23px;
 }
 
+.formatted-number-input {
+  display: flex;
+}
+
 // added a wrapping Form.Item on FormattedNumberInput which gave it Form.Item's margin-bottom
 .formatted-number-input .ant-form-item {
   margin-bottom: 0;
